[package]
name = "olg-server"
version = "0.1.0"
edition = "2024"
authors = [
    "Luca Cireddu <sardylan@gmail.com>"
]

[dependencies]
actix-web = { version = "4.12.1", features = ["compress-brotli", "compress-gzip", "compress-zstd", "macros", "unicode"] }
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["cargo", "color", "derive", "env", "string", "unicode", "usage", "error-context", "suggestions"] }
chrono = "0.4.42"
deadpool-postgres = "0.14.1"
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.33"
tokio = { version = "1.48.0", features = ["full"] }
tokio-postgres = { version = "0.7.15", features = ["with-bit-vec-0_8", "with-chrono-0_4", "with-cidr-0_3", "with-uuid-1"] }
tokio-util = { version = "0.7.17", features = ["full"] }
tracing = "0.1.43"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.22", features = ["ansi", "serde", "chrono", "env-filter"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
yaml = "0.3.0"

[dev-dependencies]
