[package]
name = "olg-server"
description = "OnLineGaming server backend"
version = "0.4.0"
edition = "2024"
authors = [
    "Luca Cireddu <sardylan@gmail.com>"
]
readme = "README.md"
license-file = "LICENSE.md"
repository = "https://github.com/sardylan/olg-server"
categories = ["web-programming", "network-programming", "database"]

[dependencies]
actix-web = { version = "4.12.1", features = ["compress-brotli", "compress-gzip", "compress-zstd", "macros", "unicode"] }
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["cargo", "color", "derive", "env", "string", "unicode", "usage", "error-context", "suggestions"] }
deadpool-postgres = "0.14.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tokio-postgres = { version = "0.7.15", features = ["with-bit-vec-0_8", "with-chrono-0_4", "with-cidr-0_3", "with-uuid-1"] }
tracing = "0.1.43"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.22", features = ["ansi", "serde", "chrono", "env-filter"] }

[dev-dependencies]
serde_json = "1.0.145"
